# bbmuse

./: .gitignore  LICENSE  README.md  pyproject.toml  upload_to_pypi.sh
examples/DummyProject/: project.bbmuse
examples/DummyProject/modules/: ModWithWorker.py
examples/DummyProject/modules/core/: ModA.py  ModC.py  ModOut.py
examples/DummyProject/representations/: RepA.py  RepOut2.py
examples/EmptyProject/: project.bbmuse
src/bbmuse/: cli.py
src/bbmuse/engine/: base_handler.py  blackboard.py  config.py  control_group.py  controller.py  module_handler.py  project.py  representation_handler.py
src/bbmuse/learn/: checkpoint.py  cli.py  cloning_session.py  listening_module_handler.py  listening_session.py  module_clone.py  module_handler_listener.py  module_listener.py  module_manager.py  policy_model.py  policy_prober.py  sculpting_session.py  session.py
src/bbmuse/util/: visualization.py
templates/EmptyProject/: project.bbmuse
templates/ExampleProject/: project.bbmuse
templates/ExampleProject/Modules/: ModA.py  ModB.py  ModC.py  ModNotWorking.py  ModOut.py  Timer.py
templates/ExampleProject/Representations/: Clock.py  RepA.py  RepB.py  RepNotWorking.py  RepUnused.py
templates/ExampleProject/modules/core/: ModA.py
tests/: .gitignore
tests/DummyProject/: project.bbmuse
tests/DummyProject/modules/core/: Init.py  ModA.py  ModOut.py
tests/DummyProject/representations/: BibRep.py  RepA.py  RepB.py  RepConfig.py  RepOut1.py
tests/LearnProject/: project.bbmuse
tests/LearnProject/backbones/: custom.py  mlp.py
(+4 files in other folders)
