[project]
name = "bbmuse"
version = "0.1.dev2"
authors = [
  { name="Fabian Ostermann", email="fabian.ostermann@tu-dortmund.de" },
]
description = "BlackBoard MUSic Engine - A blackboard system for realtime AI music generation"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/fabianostermann/bbmuse"
Issues = "https://github.com/fabianostermann/bbmuse/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project.scripts]
bbmuse = "bbmuse.cli:main"
bblearn = "bbmuse.learn.cli:main"

[project.optional-dependencies]
plot  = ["networkx", "matplotlib"]
learn = ["torch", "numpy"]
gui   = ["nicegui"]
all   = ["bbmuse[plot,learn,gui]"]
